--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Keith J Francis">
-    <meta name="description" content="">
+    <meta name="description" content="Typing test">
     <meta name="keywords" content="">
-    <title>A title goes here</title>
+    <title>Typing Test</title>
+
+    <!-- Links -->
     <script defer src="script.js"></script>
-    <link rel="icon" href="">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+
   </body>
 </html>
