--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <title>Typing Test</title>
 
     <!-- Links -->
-    <script defer src="script.js"></script>
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <h1>Typing Test</h1>
+    <div id="text-container"></div>
+    <div id="timer">Time Left: 60s</div>
+    <div id="final-score"></div>
+    <button type="button" id="try-again">Try Again</button>
+    <script src="./script.js"></script>
   </body>
 </html>
